del button fixed + deleteLastDigit method

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             0
         </div>
         <div class="row row1">
-            <button class="btn ac" value="C">AC</button>
-            <button class="btn ac" value="del"><-</button>
+            <button class="btn ac" value="C">clear</button>
+            <button class="btn ac del" value="del">←</button>
             <button class="btn sign" value="+/-">+/-</button>
             <button class="btn operator" value="/">/</button>
         </div>
